--- a/user-details.html
+++ b/user-details.html
@@ -88,9 +88,6 @@
                     <div class="about-user2039 mt-70">
                         <div class="user-title3930">
                             <h3>About <a href="#">Ahmed Hassan</a>
-
-                                <span class="badge229">
-                                    <a href="#">punit</a></span>
                             </h3>
                             <hr>
                         </div>
@@ -102,15 +99,11 @@
                                         4, 2014</li>
                                     <li><i class="fa fa-map-marker" aria-hidden="true"></i> <strong>Country:</strong>
                                         Egypt</li>
-                                    <li><i class="fa fa-heart" aria-hidden="true"></i> <strong>Age:</strong> 27</li>
-                                    <li><i class="fa fa-globe" aria-hidden="true"></i> <strong>Website:</strong><a
-                                            href="#">view</a></li>
+                                    <li><i class="fa fa-heart" aria-hidden="true"></i> <strong>Age:</strong> 27</li>                                  
                                 </ul>
                             </div>
                             <div class="ul-list-user-right29">
                                 <ul>
-                                    <li><i class="fa fa-phone" aria-hidden="true"></i> <strong>Phone:</strong>
-                                        01111111110</li>
                                     <li><i class="fa fa-globe" aria-hidden="true"></i> <strong>City:</strong> Cairo</li>
                                     <li><i class="fa fa-user" aria-hidden="true"></i> <strong>Sex: </strong>Male</li>
                                 </ul>
@@ -120,34 +113,28 @@
                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna
                                 adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis
                                 neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-                                turpis egestas. Curabitur vitae velit in neque dictum blandit.</p> <a href="#">Ask Ahmed
-                                Hasan</a>
-                        </div>
-                        <div class="user-social3903">
-                            <p>Follow : <span>
-                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-
-                                </span> </p>
+                                turpis egestas. Curabitur vitae velit in neque dictum blandit.</p> 
+                                
+                                <button class="btn btn-danger" disabled>Find Me!</button>
+                                <p style="margin-bottom: 0;">*Find Me feature not available on desktop web version. Please use the mobile version to use this feature</p>
                         </div>
                     </div>
-                    <div class="user-statas921">
+                    <div class="achievement-showcase">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="user-title3930" style="padding-left: 20px;">
+                                    <h3>Achievements Showcase</h3>
+                                    <hr>
+                                </div>                     
+                            </div>              
+                        </div>                     
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="ul_list_ul_list-icon-ok281">
                                     <ul>
-                                        <li><a href="#">Questions ( 4 )</a></li>
-                                        <li><a href="#">Asked Questions ( 0 )</a></li>
-                                        <li><a href="#">Followed Questions ( 3 )</a></li>
-                                        <li><a href="#">Posts ( 10 )</a></li>
-                                        <li><a href="#">Points ( 208 )</a></li>
-                                        <li><a href="#">Followers ( 47 )</a></li>
-                                        <li><a href="#">Comments ( 1 )</a></li>
+                                        <li><a href="#">Alps Challenger Participant</a></li>
+                                        <li><a href="#">Mount Merapi Challenge Participant</a></li>
+                                        
                                     </ul>
                                 </div>
                             </div>
