--- a/logIn.html
+++ b/logIn.html
@@ -31,7 +31,7 @@
           <input type="email" id="Email" name="Email" placeholder="Email" />
           <input type="password" id="Password" name="Password" placeholder="Password" />
           <div class="text-center">
-            <button class="button" style="border: none;">LOG IN</button>
+            <button type="submit" class="button" style="border: none;">LOG IN</button>
             <a href="signup.html">
               <div class="button">Create an account</div>
             </a>
@@ -44,7 +44,7 @@
   </div>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 
-  <script src="/js/login.js"></script>
+  <script src="js/login.js"></script>
 
 </body>
 
