feat: minor fixes, add edit profile and achievement

--- a/post-deatils.html
+++ b/post-deatils.html
@@ -280,6 +280,8 @@
                            <li><a href="#">Discussion</a></li>
                            <li><a href="#">Guidance</a></li>
                            <li><a href="#">Experiences</a></li>
+                           <li><a href="#">Challenge</a></li>
+                           <li><a href="#">Information</a></li>
                            <li><a href="#">Question</a></li>
                         </ul>
                     </div>
