--- a/post-thread.html
+++ b/post-thread.html
@@ -94,9 +94,9 @@
                                 <p></p>
                             </div>
                             <div class="question-title39">
-                                <span class="form-description433">Question-Title* </span>
+                                <span class="form-description433">Thread Title* </span>
                                 <input type="text" name="fname" class="question-ttile32"
-                                    placeholder="Write Your Question Title">
+                                    placeholder="Write Your Thread Title">
                             </div>
 
                             <div class="categori49">
@@ -107,6 +107,8 @@
                                     <option value="Discussion">
                                     <option value="Guidance">
                                     <option value="Experiences">
+                                    <option value="Challenge"></option>
+                                    <option value="Information"></option>
                                     <option value="Question">
                                 </datalist>
                             </div>
@@ -138,6 +140,8 @@
                             <li><a href="#">Discussion</a></li>
                             <li><a href="#">Guidance</a></li>
                             <li><a href="#">Experiences</a></li>
+                            <li><a href="#">Challenge</a></li>
+                            <li><a href="#">Information</a></li>
                             <li><a href="#">Question</a></li>
                         </ul>
                     </div>
