--- a/your-routes.html
+++ b/your-routes.html
@@ -89,6 +89,9 @@
                         <h1 style="font-weight: bolder;">Your Saved Routes</h1>
                         <hr>
 
+                        <a href="https://www.google.co.id/maps" class="route-btn btn btn-primary">
+                            Create New Route (via GMaps)
+                        </a>
                         <button type="button" class="route-btn btn btn-primary" data-toggle="modal" data-target="#add-new-route">
                             Add New Route
                         </button>
@@ -156,6 +159,8 @@
                             <li><a href="#">Discussion</a></li>
                             <li><a href="#">Guidance</a></li>
                             <li><a href="#">Experiences</a></li>
+                            <li><a href="#">Challenge</a></li>
+                            <li><a href="#">Information</a></li>
                             <li><a href="#">Question</a></li>
                         </ul>
                     </div>
@@ -234,7 +239,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group row mt-2">
-                                    <label class="col-sm-9 col-form-label" for="Link">Google Map Embed Link</label>
+                                    <label class="col-sm-9 col-form-label" for="Link">Google Map Embed Link (Get the link from creating the route first) </label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control mt-2" id="Link" name="Link" placeholder="Google Map Link" required>
                                     </div>
