fix: target blank when creating route

--- a/your-routes.html
+++ b/your-routes.html
@@ -89,7 +89,7 @@
                         <h1 style="font-weight: bolder;">Your Saved Routes</h1>
                         <hr>
 
-                        <a href="https://www.google.co.id/maps" class="route-btn btn btn-primary">
+                        <a href="https://www.google.co.id/maps" target="_blank" class="route-btn btn btn-primary">
                             Create New Route (via GMaps)
                         </a>
                         <button type="button" class="route-btn btn btn-primary" data-toggle="modal" data-target="#add-new-route">
